--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,4 +1,17 @@
-.cover__link {
+.cover__overlay {
     color: #fff;
     text-decoration: none;
+    background: rgba(42, 44, 47, .3);
+    box-sizing: border-box;
+    padding: 33px 16px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.cover__overlay:hover {
+    background: rgba(42, 44, 47, .7);
 }
