--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -7,6 +7,7 @@
 
 @media screen and (min-width: 767px) {
     .footer__list {
-        margin: 0;
+        display: flex;
+        margin-bottom: 0;
     }
 }
