--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,9 +1,14 @@
 .header__lang-link {
-    font-family: Inter;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     color: #fff;
     font-size: 18px;
     letter-spacing: 0em;
     line-height: 20px;
+    text-decoration: none;
+}
+
+.header__lang-link:hover {
+    opacity: 0.8;
 }
 
 @media (min-width: 450px) {
