--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -2,8 +2,15 @@
     font-size: 12px;
     line-height: 18px;
     letter-spacing: 0em;
+    font-weight: 700;
     text-align: left;
     margin: 35px 0 0 0;
     padding: 0;
     list-style: none;
+}
+
+@media screen and (min-width: 768px) {
+    .intro__list {
+        margin: 32px 0 0 0;
+    } 
 }
