--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,7 +1,19 @@
 .lead__caption {
     font-size: 10px;
     line-height: 14px;
-    letter-spacing: 0.24em;
-    margin: 0;
-    align-self: start;
+    letter-spacing: 0.15em;
+    margin-left: 16px;
+    text-transform: uppercase;
+}
+
+@media (min-width: 768px) {
+    .lead__caption {
+        margin-left: 24px;
+    }
+}
+
+@media (min-width: 928px) {
+    .lead__caption {
+        margin-left: 0;
+    } 
 }
