--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,8 +1,8 @@
 .place__title {
-font-size: 32px;
-font-weight: 900;
-line-height: 35px;
-margin: 0 16px;
+    font-size: 32px;
+    font-weight: 900;
+    line-height: 35px;
+    margin: 0 16px;
 }
 
 @media screen and (min-width: 768px) {
@@ -18,5 +18,12 @@ margin: 0 16px;
     .place__title {
         font-size: 72px;
         line-height: 76px;
+        width: 440px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .place__title {
+        width: 460px;
     }
 }
