--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,6 +1,7 @@
 .place__url-heading {
     font-size: 12px;
     line-height: 12px;
+    font-weight: 400;
     letter-spacing: 0.2em;
     color: #aaa;
     margin: 0;
